테스트 2에서 태그 추가

--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
     <body>
         <li>테스트 1 태그 추가</li>
         <ui>테스트 1 태그 하나 더 추가</ui>
+
+        <li>이건 테스트2에서 태그 추가한 겁니다</li>
     </body>
 </html>
