작업 중 3줄 추가

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <ui>테스트 1 태그 4번째 추가</ui>
          <ui>테스트 1 태그 5번째 추가</ui>
          <ui> 테스트 1에서 작업을 하는 중입니다. .. .... .</ui>
+         <ui> 테스트 1에서 작업을 하는 중입니다. .. .... .</ui>
 
         <li>이건 테스트2에서 태그 추가한 겁니다</li>
         <li>이건 테스트2에서 태그 2 추가한 겁니다</li>
